validator_derive/tests/compile-fail/range/wrong_type.stderr
error: proc-macro derive panicked
 --> $DIR/wrong_type.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^
  |
  = help: message: Validator `range` can only be used on number types but found `String` for field `s`
